--- a/Problem Solving with Algorithms.ipynb
+++ b/Problem Solving with Algorithms.ipynb
@@ -5,19 +5,7 @@
    "execution_count": 1,
    "id": "425eab23",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'Python'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [1], line 25\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmissingno\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mmiss\u001b[39;00m\n\u001b[1;32m---> 25\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mPython\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpy\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'Python'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -47,20 +35,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ced82916",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "py ---version"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "68305ae9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os, sys\n",
     "os.system(sys.executable + ' -m pip install --user bigbookpython')\n"
@@ -68,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "25908cca",
    "metadata": {},
    "outputs": [],
@@ -78,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "301b55d0",
    "metadata": {},
    "outputs": [],
@@ -88,18 +77,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "76c4a34a",
+   "execution_count": 6,
+   "id": "a15b2ea9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'birthdayparadox' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mbirthdayparadox\u001b[49m\u001b[38;5;241m.\u001b[39mpy\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'birthdayparadox' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "python: bagels.py"
+    "birthdayparadox.py"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ec447b8",
+   "id": "31b78b44",
    "metadata": {},
    "outputs": [],
    "source": []
