--- a/Alogirthms in History.ipynb
+++ b/Alogirthms in History.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "be047de7",
+   "id": "8d456fa1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "83e732c7",
+   "id": "ad217aad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5f1a2ef5",
+   "id": "e378811e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4c1fa467",
+   "id": "c67f8cf1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f2f2053b",
+   "id": "954ba814",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "231c7614",
+   "id": "37963b1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,8 +95,102 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "dd4a2acb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doubling = [n2]\n",
+    "while(len(doubling) < len(halving)):\n",
+    "    doubling.append(max(doubling) * 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ce6ef73f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "half_double = pd.DataFrame(zip(halving,doubling))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "30b977f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "half_double = half_double.loc[half_double[0]%2 == 1,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "59c31bdf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "answer = sum(half_double.loc[:,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "13c5b520",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gcd(x,y):\n",
+    "    larger = max(x,y)\n",
+    "    smaller = min(x,y)\n",
+    "    \n",
+    "    remainder = larger % smaller\n",
+    "    \n",
+    "    if(remainder == 0):\n",
+    "        return(smaller)\n",
+    "    \n",
+    "    if(remainder != 0):\n",
+    "        return(gcd(smaller,remainder))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "96c03b29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "luoshu = [[4,9,2],[3,5,7],[8,1,6]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5942cd72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def verifysquare(square):\n",
+    "    sums = []\n",
+    "    rowsums = [sum(square[i]) for i in range(0,len(square))]\n",
+    "    sums.append(rowsums)\n",
+    "    colsums = [sum([row[i] for row in square]) for i in range(0,len(square))]\n",
+    "    sums.append(colsums)\n",
+    "    maindiag = sum([square[i][i] for i in range(0,len(square))])\n",
+    "    sums.append([maindiag])\n",
+    "    antidiag = sum([square[i][len(square) - 1 - i] for i in \\\n",
+    "range(0, len(square))])\n",
+    "    sums.append([antidiag])\n",
+    "    flattened = [j for i in sums for j in i]\n",
+    "    return(len(list(set(flatened))) == 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f34d0f5c",
+   "id": "5e8c894d",
    "metadata": {},
    "outputs": [],
    "source": []
