--- a/Alogirthms in History.ipynb
+++ b/Alogirthms in History.ipynb
@@ -189,11 +189,262 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "5e8c894d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n = 7\n",
+    "square = [[float('nan') for i in range(0,n)] for j in range(0,n)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d9992f17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def printsquare(square):\n",
+    "    labels = ['['+str(x)+']' for x in range(0,len(square))]\n",
+    "    format_row = \"{:>6}\" * (len(labels) +1)\n",
+    "    print(format_row.format(\"\", *labels))\n",
+    "    for label, row in zip(labels, square):\n",
+    "        print(format_row.format(label, *row))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "8212b430",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math \n",
+    "center_i = math.floor(n/2)\n",
+    "center_j = math.floor(n/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d842757f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "square[center_i][center_j] = int((n**2 +1)/2)\n",
+    "square[center_i + 1][center_j] = 1\n",
+    "square[center_i - 1][center_j] = n**2\n",
+    "square[center_i][center_j + 1] = n**2 +1 - n\n",
+    "square[center_i][center_j - 1] = n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b08258df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rule1(x,n):\n",
+    "    return((x + n)%n**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "f3135cf6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(rule1(5,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "579d6979",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rule1(x,n,upright):\n",
+    "    return((x + ((-1)**upright) * n)%n**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "9ca33f89",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(rule1(1,3,True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "530691f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rule2(x,n,upleft):\n",
+    "    return((x + ((-1)**upleft))%n**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4d690a50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rule3(x,n,upleft):\n",
+    "    return((x + ((-1)**upleft *(-n + 1)))%n**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "23f8f8c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "center_i = math.floor(n/2)\n",
+    "center_j = math.floor(n/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "349cb852",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random \n",
+    "entry_i = center_i\n",
+    "entry_j = center_j\n",
+    "where_can_we_go = ['up_left','up_right','down_left','down_right']\n",
+    "where_to_go = random.choice(where_can_we_go)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "d785a5ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if(where_to_go == 'up_right'):\n",
+    "    new_entry_i = entry_i - 1\n",
+    "    new_entry_j = entry_j + 1\n",
+    "    square[new_entry_i][new_entry_j] = rule1(square[entry_i][entry_j],n,True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "2ab7248d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if(where_to_go == 'down_left'):\n",
+    "    new_entry_i = entry_i + 1\n",
+    "    new_entry_j = entry_j - 1\n",
+    "    square[new_entry_i][new_entry_j] = rule1(square[entry_i][entry_j],n,False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "a498c5b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if(where_to_go == 'up_left'):\n",
+    "    new_entry_i = entry_i - 1\n",
+    "    new_entry_j = entry_j - 1\n",
+    "    square[new_entry_i][new_entry_j] = rule2(square[entry_i][entry_j],n,True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "5d7c420a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if(where_to_go == 'down_right'):\n",
+    "    new_entry_i = entry_i + 1\n",
+    "    new_entry_j = entry_j + 1\n",
+    "    square[new_entry_i][new_entry_j] = rule2(square[entry_i][entry_j],n,False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "647f8812",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if(where_to_go == 'up_left' and (entry_i + entry_j) == (n)):\n",
+    "    new_entry_i = entry_i - 1\n",
+    "    new_entry_j = entry_j -1\n",
+    "    square[new_entry_i][new_entry_j] = rule3(square[entry_i][entry_j],n,True)\n",
+    "    \n",
+    "if(where_to_go == 'down_right' and (entry_i + entry_j) == (n-2)):\n",
+    "    new_entry_i = entry_i +1\n",
+    "    new_entry_j = entry_j +1\n",
+    "    square[new_entry_i][new_entry_j] = rule3(square[entry_i][entry_j],n,False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "24fa8771",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "where_we_can_go = []\n",
+    "\n",
+    "if(entry_i < (n - 1) and entry_j < (n - 1)):\n",
+    "    where_we_can_go.append('down_right')\n",
+    "    \n",
+    "if(entry_i < (n - 1) and entry_j > 0):\n",
+    "    where_we_can_go.append('down_left')\n",
+    "    \n",
+    "if(entry_i < (n - 1) and entry_j < (n - 1)):\n",
+    "    where_we_can_go.append('up_right')\n",
+    "    \n",
+    "if(entry_i < (n - 1) and entry_j > 0):\n",
+    "    where_we_can_go.append('up_left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8084d48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n"
+   ]
   }
  ],
  "metadata": {
