--- a/Alogirthms in History.ipynb
+++ b/Alogirthms in History.ipynb
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d9992f17",
+   "id": "ac5cec3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "8212b430",
+   "id": "26b45e24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d842757f",
+   "id": "3b6f3e2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b08258df",
+   "id": "53c74755",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f3135cf6",
+   "id": "0eb8944d",
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "579d6979",
+   "id": "efd65b61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9ca33f89",
+   "id": "6b5b2511",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "530691f8",
+   "id": "4702501f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "4d690a50",
+   "id": "e76dd091",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "23f8f8c7",
+   "id": "248c16c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "349cb852",
+   "id": "31989ee3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "d785a5ff",
+   "id": "30b649a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2ab7248d",
+   "id": "46c3aa5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a498c5b7",
+   "id": "c803ff89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "5d7c420a",
+   "id": "9c2131e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "647f8812",
+   "id": "896abd2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "24fa8771",
+   "id": "b9c67f38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,13 +438,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f8084d48",
+   "execution_count": 32,
+   "id": "09ff3be2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n"
+    "import random\n",
+    "def fillsquare(square,entry_i,entry_j,howfull):\n",
+    "    while(sum(math.isnan(i) for row in square for i in row) > howfull):\n",
+    "        where_we_can_go = []\n",
+    "        \n",
+    "        if(entry_i < (n - 1) and entry_j < (n - 1)):\n",
+    "            where_we_can_go.append('down_right')\n",
+    "        if(entry_i < (n - 1) and entry_j > 0):\n",
+    "            where_we_can_go.append('down_left')\n",
+    "        if(entry_i >  0 and entry_j < (n - 1)):\n",
+    "            where_we_can_go.append('up_right')\n",
+    "        if(entry_i < (n - 1) and entry_j > 0):\n",
+    "            where_we_can_go.append('up_left')\n",
+    "        \n",
+    "            where_to_go = random.choice(where_we_can_go)\n",
+    "        if(where_to_go == 'up_right'):\n",
+    "            new_entry_i = entry_i - 1\n",
+    "            new_entry_j = entry_j + 1\n",
+    "            square[new_entry_i][new_entry_j] = rule1(square[entry_i][entry_j],n,True)\n",
+    "            \n",
+    "        if(where_to_go == 'down_left'):\n",
+    "            new_entry_i = entry_i + 1\n",
+    "            new_entry_j = entry_j - 1\n",
+    "            square[new_entry_i][new_entry_j] = rule1(square[entry_i][entry_j],n,False)\n",
+    "        \n",
+    "        if(where_to_go == 'up_left' and (entry_i + entry_j) != (n)):\n",
+    "            new_entry_i = entry_i - 1\n",
+    "            new_entry_j = entry_j - 1\n",
+    "            square[new_entry_i][new_entry_j] = rule2(square[entry_i][entry_j],n,True)\n",
+    "            \n",
+    "        if(where_to_go == 'down_right' and (entry_i + entry_j) != (n-2)):\n",
+    "            new_entry_i = entry_i + 1\n",
+    "            new_entry_j = entry_j + 1\n",
+    "            square[new_entry_i][new_entry_j] = rule2(square[entry_i][entry_j],n,False)\n",
+    "            \n",
+    "        if(where_to_go == 'up_left' and (entry_i + entry_j) == (n)):\n",
+    "            new_entry_i = entry_i - 1\n",
+    "            new_entry_j = entry_j - 1\n",
+    "            square[new_entry_i][new_entry_j] = rule3(square[entry_i][entry_j],n,True)\n",
+    "            \n",
+    "        if(where_to_go == 'down_right' and (entry_i + entry_j) == (n-2)):\n",
+    "            new_entry_i = entry_i + 1\n",
+    "            new_entry_j = entry_j + 1\n",
+    "            square[new_entry_i][new_entry_j] = rule3(square[entry_i][entry_j],n,False)\n",
+    "            \n",
+    "        entry_i = new_entry_i\n",
+    "        entry_j= new_entry_j\n",
+    "\n",
+    "    return(square)            "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "0a2fe9b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [33], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m entry_i \u001b[38;5;241m=\u001b[39m math\u001b[38;5;241m.\u001b[39mfloor(n\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m      2\u001b[0m entry_j \u001b[38;5;241m=\u001b[39m math\u001b[38;5;241m.\u001b[39mfloor(n\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m square \u001b[38;5;241m=\u001b[39m \u001b[43mfillsquare\u001b[49m\u001b[43m(\u001b[49m\u001b[43msquare\u001b[49m\u001b[43m,\u001b[49m\u001b[43mentry_i\u001b[49m\u001b[43m,\u001b[49m\u001b[43mentry_j\u001b[49m\u001b[43m,\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn [32], line 34\u001b[0m, in \u001b[0;36mfillsquare\u001b[1;34m(square, entry_i, entry_j, howfull)\u001b[0m\n\u001b[0;32m     32\u001b[0m     new_entry_i \u001b[38;5;241m=\u001b[39m entry_i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     33\u001b[0m     new_entry_j \u001b[38;5;241m=\u001b[39m entry_j \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m---> 34\u001b[0m     \u001b[43msquare\u001b[49m\u001b[43m[\u001b[49m\u001b[43mnew_entry_i\u001b[49m\u001b[43m]\u001b[49m[new_entry_j] \u001b[38;5;241m=\u001b[39m rule2(square[entry_i][entry_j],n,\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m     36\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m(where_to_go \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mup_left\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m (entry_i \u001b[38;5;241m+\u001b[39m entry_j) \u001b[38;5;241m==\u001b[39m (n)):\n\u001b[0;32m     37\u001b[0m     new_entry_i \u001b[38;5;241m=\u001b[39m entry_i \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "entry_i = math.floor(n/2)\n",
+    "entry_j = math.floor(n/2)\n",
+    "\n",
+    "square = fillsquare(square,entry_i,entry_j,(n**2)/2 - 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37dcc0a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "printsquare(square)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb15db0c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
