--- a/Pure Math.ipynb
+++ b/Pure Math.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5794bc37",
+   "id": "f95b1b88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "86b0c9ef",
+   "id": "fb4777cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c6c7abc6",
+   "id": "7c65c282",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "168e0aed",
+   "id": "18fc10d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "13190833",
+   "id": "23555f8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "18fd4ffb",
+   "id": "b02383ec",
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b0bf4ed9",
+   "id": "144861f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "186d3abf",
+   "id": "4fcd28a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "63cbbf9d",
+   "id": "153fb5bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9287a9b9",
+   "id": "c450c37f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ee633ac0",
+   "id": "7bf803a0",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f7f3d0a3",
+   "id": "4db5b158",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5d8ffdb6",
+   "id": "16317967",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3b916399",
+   "id": "9bf75314",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ae5e0443",
+   "id": "e2b1c4dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "99cf6add",
+   "id": "95357b24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f220d82e",
+   "id": "4742f1c9",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "259d9ae9",
+   "id": "61236f60",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "0252530c",
+   "id": "f77155dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "5d219ce5",
+   "id": "368f4f16",
    "metadata": {},
    "outputs": [
     {
@@ -414,8 +414,100 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "63267240",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bits = [1,1,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e5aa818c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xor_result = (bits[1] + bits[2]) % 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "980dc2a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = bits.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "02c0788c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bits.insert(0,xor_result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "a9c040b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def feedback_shift(bits):\n",
+    "    xor_result = (bits[1] + bits[2]) % 2\n",
+    "    output = bits.pop()\n",
+    "    bits.insert(0,xor_result)\n",
+    "    return(bits,output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "e6d7ce53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def feedback_shift_list(bits_this):\n",
+    "    bits_output = [bits_this.copy()]\n",
+    "    random_output = []\n",
+    "    bits_next = bits_this.copy()\n",
+    "    while(len(bits_output) < 2**len(bits_this)):\n",
+    "        bits_next,next = feedback_shift(bits_next)\n",
+    "        bits_output.append(bits_next.copy())\n",
+    "        random_output.append(next)\n",
+    "    return(bits_output,random_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "4aa02f1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bitslist = feedback_shift_list([1,1,1])[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "281472e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pseudorandom_bits = feedback_shift_list([1,1,1])[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "07ebe2f1",
+   "id": "910ef20f",
    "metadata": {},
    "outputs": [],
    "source": []
