--- a/Advanced Optimization.ipynb
+++ b/Advanced Optimization.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6831a404",
+   "id": "cf708d76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,8 +35,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "a34b58b5",
+   "execution_count": 2,
+   "id": "9d253650",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,8 +49,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "b3dc9725",
+   "execution_count": 3,
+   "id": "13b185ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,8 +60,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "41cacf35",
+   "execution_count": 4,
+   "id": "68ff0c4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,8 +70,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "b08c77f4",
+   "execution_count": 5,
+   "id": "423b26d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,8 +80,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "541edff0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for j in range(0,len(itinerary) - 1):\n",
+    "    lines.append([cities[itinerary[j]],cities[itinerary[j + 1]]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7334e1c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def genlines(cities,itinerary):\n",
+    "    lines = []\n",
+    "    for j in range(0,len(itinerary) - 1):\n",
+    "        lines.append([cities[itinerary[j]],cities[itinerary[j +1]]])\n",
+    "    return(lines)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f7e5d480",
+   "id": "ebbaad45",
    "metadata": {},
    "outputs": [],
    "source": []
