--- a/Advanced Optimization.ipynb
+++ b/Advanced Optimization.ipynb
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7334e1c1",
+   "id": "75269d92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,8 +105,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "d7968f0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "def howfar(lines):\n",
+    "    distance = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ebbaad45",
+   "id": "f2c570e7",
    "metadata": {},
    "outputs": [],
    "source": []
