--- a/Advanced Optimization.ipynb
+++ b/Advanced Optimization.ipynb
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "75269d92",
+   "id": "e827d086",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,19 +106,86 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d7968f0d",
+   "id": "2fd98434",
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "def howfar(lines):\n",
-    "    distance = 0"
+    "    distance = 0\n",
+    "    for j in range(0,len(lines)):\n",
+    "        distance += math.sqrt(abs(lines[j][1][0] - lines[j][0][0])**2 + \\\n",
+    "        abs(lines[j][1][1] - lines[j][0][1])**2)\n",
+    "    return(distance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c31380ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16.808756356994223\n"
+     ]
+    }
+   ],
+   "source": [
+    "totaldistance = howfar(genlines(cities,itinerary))\n",
+    "print(totaldistance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "93678ad8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.collections as mc\n",
+    "import matplotlib.pylab as pl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "53f21804",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plotitinerary(cities,itin,plottitle,thename):\n",
+    "    lc = mc.LineCollection(genlines(cities,itin), linewidths=2)\n",
+    "    fig, ax = pl.subplots()\n",
+    "    ax.add_collections(lc)\n",
+    "    ax.autoscale()\n",
+    "    ax.margins(0.1)\n",
+    "    pl.scatter(x, y)\n",
+    "    plt.title(plottitle)\n",
+    "    pl.xlabel('X Coordinate')\n",
+    "    pl.ylabel('Y Coordinate')\n",
+    "    pl.savefig(str(thename) + '.png')\n",
+    "    pl.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9a88e5d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "point = [0.5,0.5]\n",
+    "j = 10\n",
+    "distance = math.sqrt((point[0] - cities[j][0])**2 + (point[1] - cities[j][1])**2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2c570e7",
+   "id": "77693251",
    "metadata": {},
    "outputs": [],
    "source": []
