--- a/Advanced Optimization.ipynb
+++ b/Advanced Optimization.ipynb
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e827d086",
+   "id": "b8047e51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2fd98434",
+   "id": "e8c9483d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c31380ab",
+   "id": "5efc34ca",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "93678ad8",
+   "id": "bd0c657a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "53f21804",
+   "id": "df60cb4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9a88e5d7",
+   "id": "515062b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,8 +184,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "8006a335",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findnearest(cities,idx,nninitnerary):\n",
+    "    point = cities[idx]\n",
+    "    mindistance = float('inf')\n",
+    "    minidx = - 1\n",
+    "    for j in range(0,lne(cities)):\n",
+    "        distance = math.sqrt((point[0] - cities[j][0])**2 + (point[1] - cities[j][1])**2)\n",
+    "        if distance < mindistance and distance > 0 and j in nnitinerary:\n",
+    "            mindisance = distance\n",
+    "            minidx = j\n",
+    "    return(minidx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d92b3af1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nnintinerary = [0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d0613f87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def donn(cities,N):\n",
+    "    nnintinerary = [0]\n",
+    "    for j in range(0,N - 1):\n",
+    "        next = findnearest(cities,nnintinerary[len(nnitinerary) - 1],nnitinerary)\n",
+    "        nnintinerary.append(next)\n",
+    "    return(nnintinerary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "430459d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'nnitinerary' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m plotitinerary(cities,\u001b[43mdonn\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcities\u001b[49m\u001b[43m,\u001b[49m\u001b[43mN\u001b[49m\u001b[43m)\u001b[49m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTSP-Nearest Neighbor\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfigure3\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[1;32mIn [15], line 4\u001b[0m, in \u001b[0;36mdonn\u001b[1;34m(cities, N)\u001b[0m\n\u001b[0;32m      2\u001b[0m nnintinerary \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m,N \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m):\n\u001b[1;32m----> 4\u001b[0m     \u001b[38;5;28mnext\u001b[39m \u001b[38;5;241m=\u001b[39m findnearest(cities,nnintinerary[\u001b[38;5;28mlen\u001b[39m(\u001b[43mnnitinerary\u001b[49m) \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m],nnitinerary)\n\u001b[0;32m      5\u001b[0m     nnintinerary\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28mnext\u001b[39m)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m(nnintinerary)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'nnitinerary' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "plotitinerary(cities,donn(cities,N), 'TSP-Nearest Neighbor','figure3')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "77693251",
+   "id": "cf5b7cff",
    "metadata": {},
    "outputs": [],
    "source": []
