--- a/Advanced Optimization.ipynb
+++ b/Advanced Optimization.ipynb
@@ -193,7 +193,7 @@
     "    point = cities[idx]\n",
     "    mindistance = float('inf')\n",
     "    minidx = - 1\n",
-    "    for j in range(0,lne(cities)):\n",
+    "    for j in range(0,len(cities)):\n",
     "        distance = math.sqrt((point[0] - cities[j][0])**2 + (point[1] - cities[j][1])**2)\n",
     "        if distance < mindistance and distance > 0 and j in nnitinerary:\n",
     "            mindisance = distance\n",
@@ -221,7 +221,7 @@
     "def donn(cities,N):\n",
     "    nnintinerary = [0]\n",
     "    for j in range(0,N - 1):\n",
-    "        next = findnearest(cities,nnintinerary[len(nnitinerary) - 1],nnitinerary)\n",
+    "        next = findnearest(cities,nnintinerary[len(nnintinerary) - 1],nnintinerary)\n",
     "        nnintinerary.append(next)\n",
     "    return(nnintinerary)"
    ]
@@ -239,14 +239,15 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m plotitinerary(cities,\u001b[43mdonn\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcities\u001b[49m\u001b[43m,\u001b[49m\u001b[43mN\u001b[49m\u001b[43m)\u001b[49m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTSP-Nearest Neighbor\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfigure3\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "Cell \u001b[1;32mIn [15], line 4\u001b[0m, in \u001b[0;36mdonn\u001b[1;34m(cities, N)\u001b[0m\n\u001b[0;32m      2\u001b[0m nnintinerary \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m,N \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m):\n\u001b[1;32m----> 4\u001b[0m     \u001b[38;5;28mnext\u001b[39m \u001b[38;5;241m=\u001b[39m findnearest(cities,nnintinerary[\u001b[38;5;28mlen\u001b[39m(\u001b[43mnnitinerary\u001b[49m) \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m],nnitinerary)\n\u001b[0;32m      5\u001b[0m     nnintinerary\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28mnext\u001b[39m)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m(nnintinerary)\n",
+      "Cell \u001b[1;32mIn [16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m plotitinerary(cities,\u001b[43mdonn\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcities\u001b[49m\u001b[43m,\u001b[49m\u001b[43mN\u001b[49m\u001b[43m)\u001b[49m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTSP - Nearest Neighbor\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfigure3\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[1;32mIn [15], line 4\u001b[0m, in \u001b[0;36mdonn\u001b[1;34m(cities, N)\u001b[0m\n\u001b[0;32m      2\u001b[0m nnintinerary \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m,N \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m):\n\u001b[1;32m----> 4\u001b[0m     \u001b[38;5;28mnext\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[43mfindnearest\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcities\u001b[49m\u001b[43m,\u001b[49m\u001b[43mnnintinerary\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mnnintinerary\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mnnintinerary\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m     nnintinerary\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28mnext\u001b[39m)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m(nnintinerary)\n",
+      "Cell \u001b[1;32mIn [13], line 7\u001b[0m, in \u001b[0;36mfindnearest\u001b[1;34m(cities, idx, nninitnerary)\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;28mlen\u001b[39m(cities)):\n\u001b[0;32m      6\u001b[0m     distance \u001b[38;5;241m=\u001b[39m math\u001b[38;5;241m.\u001b[39msqrt((point[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m-\u001b[39m cities[j][\u001b[38;5;241m0\u001b[39m])\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m \u001b[38;5;241m+\u001b[39m (point[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m-\u001b[39m cities[j][\u001b[38;5;241m1\u001b[39m])\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m----> 7\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m distance \u001b[38;5;241m<\u001b[39m mindistance \u001b[38;5;129;01mand\u001b[39;00m distance \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[43mnnitinerary\u001b[49m:\n\u001b[0;32m      8\u001b[0m         mindisance \u001b[38;5;241m=\u001b[39m distance\n\u001b[0;32m      9\u001b[0m         minidx \u001b[38;5;241m=\u001b[39m j\n",
       "\u001b[1;31mNameError\u001b[0m: name 'nnitinerary' is not defined"
      ]
     }
    ],
    "source": [
-    "plotitinerary(cities,donn(cities,N), 'TSP-Nearest Neighbor','figure3')"
+    "plotitinerary(cities,donn(cities,N), 'TSP - Nearest Neighbor','figure3')"
    ]
   },
   {
